--- a/config.toml
+++ b/config.toml
@@ -21,7 +21,7 @@ paginate = 5
     title = "gaths-blog"
     subtitle = "gath's blog and porfolio"
     keywords = ""
-    copyright = ""
+    copyright = "© gath 2023"
     menuMore = "Show more"
     readMore = "Read more"
     readOtherPosts = "Read other posts"
