--- a/config.toml
+++ b/config.toml
@@ -1,53 +1,123 @@
 baseurl = "https://gatheeshanipulma.github.io/"
 languageCode = "en-us"
-# theme = "terminal"
+# Add it only if you keep the theme in the `themes` directory.
+# Remove it if you use the theme as a remote Hugo Module.
 paginate = 5
 
-[markup]
-  [markup.goldmark]
-    [markup.goldmark.renderer]
-      unsafe = true
-
-
 [params]
+  # dir name of your main content (default is `content/posts`).
+  # the list of set content will show up on your index page (baseurl).
   contentTypeName = "posts"
+
+  # ["orange", "blue", "red", "green", "pink"]
   themeColor = "custom"
+
+  # if you set this to 0, only submenu trigger will be visible
   showMenuItems = 4
+
+  # show selector to switch language
+  showLanguageSelector = false
+
+  # set theme to full screen width
   fullWidthTheme = false
+
+  # center theme with default width
   centerTheme = true
+
+  # if your resource directory contains an image called `cover.(jpg|png|webp)`,
+  # then the file will be used as a cover automatically.
+  # With this option you don't have to put the `cover` param in a front-matter.
+  autoCover = true
+
+  # set post to show the last updated
+  # If you use git, you can set `enableGitInfo` to `true` and then post will automatically get the last updated
+  showLastUpdated = false
+
+  # set a custom favicon (default is a `themeColor` square)
+  #favicon = "favicon.ico"
+
+  # Provide a string as a prefix for the last update date. By default, it looks like this: 2020-xx-xx [Updated: 2020-xx-xx] :: Author
+  # updatedDatePrefix = "Updated"
+
+  # set all headings to their default size (depending on browser settings)
+  # oneHeadingSize = true # default
+
+  # whether to show a page's estimated reading time
+  # readingTime = false # default
+
+  # whether to show a table of contents
+  # can be overridden in a page's front-matter
+  # Toc = true # default
+
+  # set title for the table of contents
+  # can be overridden in a page's front-matter
+  # TocTitle = "Table of Contents" # default
+
+
+[params.twitter]
+  # set Twitter handles for Twitter cards
+  # see https://developer.twitter.com/en/docs/tweets/optimize-with-cards/guides/getting-started#card-and-content-attribution
+  # do not include @
+  creator = ""
+  site = ""
 
 [languages]
   [languages.en]
-    title = "gaths-blog"
-    subtitle = "gath's blog and porfolio"
+    languageName = "English"
+    title = "gath"
+    subtitle = "gatheesha's personal blog and portfolio"
+    owner = "gatheesha"
     keywords = ""
-    copyright = "© gath 2023"
+    copyright = ""
     menuMore = "Show more"
     readMore = "Read more"
     readOtherPosts = "Read other posts"
+    newerPosts = "Newer posts"
+    olderPosts = "Older posts"
+    missingContentMessage = "Page not found..."
+    missingBackButtonLabel = "Back to home page"
+    minuteReadingTime = "min read"
+    words = "words"
 
     [languages.en.params.logo]
       logoText = "gath"
-      logoHomeLink = "/"
+      logoHomeLink = "/home"
 
     [languages.en.menu]
-      [[languages.en.menu.main]]
-        identifier = "about"
-        name = "😎about"
-        url = "/about"
-        weight = 3
+
       [[languages.en.menu.main]]
         identifier = "blog"
         name = "📝blog"
         url = "/posts"
         weight = 1
       [[languages.en.menu.main]]
+        identifier = "designs"
+        name = "🎨designs"
+        url = "/g"
+        weight = 2
+      [[languages.en.menu.main]]
         identifier = "games"
         name = "🎮games"
         url = "/games"
-        weight = 2
+        weight = 3
+      [[languages.en.menu.main]]
+        identifier = "about"
+        name = "😎about"
+        url = "/about"
+        weight = 4
 
 [module]
+  # In case you would like to make changes to the theme and keep it locally in you repository,
+  # uncomment the line below (and correct the local path if necessary).
+  # --
+  # replacements = "github.com/panr/hugo-theme-terminal -> themes/terminal"
+# [[module.imports]]
+#   path = 'github.com/panr/hugo-theme-terminal'
   [module.hugoVersion]
     extended = true
     min = '0.90.0'
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
