--- a/config.toml
+++ b/config.toml
@@ -50,14 +50,18 @@ weight = 6
     ordered = false
     startLevel = 2
   [markup.highlight]
-    codeFences = false
+    anchorLineNos = false
+    codeFences = true
     guessSyntax = false
-    hl_Lines = ""
+    hl_Lines = ''
+    hl_inline = false
+    lineAnchors = ''
     lineNoStart = 1
-    lineNos = true
-    lineNumbersInTable = false
+    lineNos = false
+    lineNumbersInTable = true
     noClasses = true
-    style = "dracula"
+    noHl = false
+    style = 'fruity'
     tabWidth = 4
   [markup.goldmark.renderer] 
     unsafe= true
